--- a/diff_correct_climate.html
+++ b/diff_correct_climate.html
@@ -72,7 +72,7 @@
       </svg>      <a href="#d2h-093772" class="d2h-file-name">/home/runner/work/progress/progress/clones/{beta/custom_components → ha-core/homeassistant/components}/plugwise/climate.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+29</span>
-          <span class="d2h-lines-deleted">-65</span>
+          <span class="d2h-lines-deleted">-67</span>
       </span>
     </span>
 </li>
@@ -4764,7 +4764,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -102,35 +81,31 @@</div>
+        <div class="d2h-code-line">@@ -102,35 +81,32 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -5192,7 +5192,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        return <del>CURRENT_HVAC_IDLE</del></span>
+            <span class="d2h-code-line-ctn"><del>        return CURRENT_HVAC_IDLE</del></span>
         </div>
     </td>
 </tr><tr>
@@ -5214,13 +5214,24 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        return <ins>HVACAction.IDLE</ins></span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-ins">
+      <div class="line-num1"></div>
+<div class="line-num2">109</div>
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        return HVACAction.IDLE</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">134</div>
-<div class="line-num2">109</div>
+<div class="line-num2">110</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5231,7 +5242,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">135</div>
-<div class="line-num2">110</div>
+<div class="line-num2">111</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5242,7 +5253,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">136</div>
-<div class="line-num2">111</div>
+<div class="line-num2">112</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5254,12 +5265,12 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -155,28 +130,17 @@</div>
+        <div class="d2h-code-line">@@ -155,28 +131,14 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">155</div>
-<div class="line-num2">130</div>
+<div class="line-num2">131</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5270,7 +5281,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">156</div>
-<div class="line-num2">131</div>
+<div class="line-num2">132</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5281,7 +5292,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">157</div>
-<div class="line-num2">132</div>
+<div class="line-num2">133</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5303,7 +5314,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">133</div>
+<div class="line-num2">134</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -5314,7 +5325,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">159</div>
-<div class="line-num2">134</div>
+<div class="line-num2">135</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5323,14 +5334,14 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">160</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        <del>self._homekit_mode</del> <del>= </del>hvac_mode<del>  #</del> <del>pw-beta</del> <del>homekit</del> <del>emulation</del></span>
+            <span class="d2h-code-line-ctn">        self._homekit_mode = hvac_mode  # pw-beta homekit emulation</span>
         </div>
     </td>
 </tr><tr>
@@ -5345,42 +5356,31 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">135</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        <ins>if</ins> hvac_mode <ins>==</ins> <ins>HVACMode.AUTO</ins> <ins>and not self.device.get(&quot;schedule_temperature&quot;):</ins></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">162</div>
-<div class="line-num2">136</div>
+<div class="line-num2"></div>
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn">            raise ValueError(&quot;Cannot set HVAC mode to Auto: No schedule available&quot;)</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">163</div>
-<div class="line-num2">137</div>
+<div class="line-num2"></div>
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">164</div>
-<div class="line-num2">138</div>
+<div class="line-num2">136</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5391,7 +5391,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">165</div>
-<div class="line-num2">139</div>
+<div class="line-num2">137</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5402,7 +5402,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">166</div>
-<div class="line-num2">140</div>
+<div class="line-num2">138</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5424,7 +5424,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">141</div>
+<div class="line-num2">139</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -5435,7 +5435,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">168</div>
-<div class="line-num2">142</div>
+<div class="line-num2">140</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5446,7 +5446,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">169</div>
-<div class="line-num2">143</div>
+<div class="line-num2">141</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5567,7 +5567,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">180</div>
-<div class="line-num2">144</div>
+<div class="line-num2">142</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5578,7 +5578,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">181</div>
-<div class="line-num2">145</div>
+<div class="line-num2">143</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -5589,7 +5589,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">182</div>
-<div class="line-num2">146</div>
+<div class="line-num2">144</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -14733,7 +14733,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>18.2</ins>&quot;<ins>]</ins>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>18.4</ins>&quot;<ins>]</ins>,</span>
         </div>
     </td>
 </tr><tr>
