Update: main - Diff report completed

--- a/diff_change_heat_cool.html
+++ b/diff_change_heat_cool.html
@@ -10180,7 +10180,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            coordinator.api.smile_name == &quot;Anna&quot;</span>
+            <span class="d2h-code-line-ctn">            coordinator.gateway[&quot;smile_name&quot;] == &quot;Anna&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -10191,7 +10191,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            and coordinator.api._cooling_present</span>
+            <span class="d2h-code-line-ctn">            and coordinator.gateway[&quot;cooling_present&quot;]</span>
         </div>
     </td>
 </tr><tr>
@@ -16127,7 +16127,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>23</del>.<del>3a0</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>23</del>.<del>3a1</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16160,7 +16160,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;1f&#x2F;33&#x2F;6073ddacbcb514419e3fcfe75bb2d7fedf443abb526dae1c93efc8782aef&#x2F;plugwise-0</del>.<del>19.0a3.tar.gz#plugwise==0.19.0a3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;85&#x2F;22&#x2F;efd16c98c1422391596a47b1e9d6fa3d0b0899f187879b9cc7fc16af3279&#x2F;plugwise-0</del>.<del>19.0a4.tar.gz#plugwise==0.19.0a4</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
